CMLG-013/ Fix SelectCol bug
Issue:
1. The users can't see all the options when the window size is smaller than the card size.
2. Solve the issue, when the window height decrease, the card will move up and cover the selectCol button.
Solution:
1. Resize the card make it smaller than the window size and enable the scrollable.
2. Change the top be fixed px rather than the percentage.
Risk:  No risk currently.
Reviewed By: --

--- a/src/components/css/SelectCol.css
+++ b/src/components/css/SelectCol.css
@@ -13,11 +13,24 @@
     padding-left: 10px;
     padding-bottom:10px;
     position: fixed;
-    top: 15%;
+    top: 90px;
     right: 16px;
-    /*overflow:"auto"*/
 }
 
 #language-options {
     z-index: 1000;
+}
+
+@media (max-height: 35rem) {
+   .card {
+       height: 15rem;
+       overflow: auto;
+   }
+}
+
+@media (max-height: 15rem) {
+    .card {
+        height: 7rem;
+        overflow: auto;
+    }
 }
